--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   email_validator: ^3.0.0
   geolocator: ^13.0.4
   geocoding: ^3.0.0
+  flutter_downloader: ^1.11.8
+  path_provider: ^2.1.4
 
 dev_dependencies:
   flutter_test:
@@ -44,3 +46,4 @@ flutter:
   assets:
     - assets/images/
     - assets/png/
+    - assets/resume/
